# pos-ecod-edge-ensemble

./: .env  .gitignore  README.md  pyproject.toml
frontend/: .env  package-lock.json  package.json
frontend/src/: App.tsx  types.ts
frontend/src/components/: MetricChart.tsx  StatCard.tsx
frontend/src/hooks/: useTimeseries.ts  useWebSocket.ts
src/ecod_edge/: cli.py  config.py  config.yaml  detectors.py  inference.py  metrics.py  pipeline.py  server.py  stream.py  utils.py
